<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>

    <string name="download_notification_channel_id" translatable="false">download_channel</string>
    <string name="download_notification_channel_name" translatable="true">Download</string>
    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>
    <string name="notification_action_check_status">Check the status</string>


    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="radio_glide">Glide - Image Loading Library by BumpTech</string>
    <string name="radio_loadApp">LoadApp - Current repository by Udacity</string>
    <string name="radio_retrofit">Retrofit - Type-safe HTTP client for Android and Java by square, Inc</string>


    <string name="file_name">File name:</string>
    <string name="file_status">Status:</string>
    <string name="ok_button">OK</string>

</resources>
