<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/btn_radio_glide"
            style="@style/RadioButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="48dp"
            android:text="@string/radio_glide" />

        <RadioButton
            android:id="@+id/btn_radio_loadApp"
            style="@style/RadioButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="48dp"
            android:text="@string/radio_loadApp" />

        <RadioButton
            android:id="@+id/btn_radio_retrofit"
            style="@style/RadioButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="48dp"
            android:text="@string/radio_retrofit" />
    </RadioGroup>


    <com.udacity.LoadingButton
        android:id="@+id/loading_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:loadingBackgroundColor="?attr/colorPrimaryDark"
        app:loadingDefaultBackgroundColor="?attr/colorPrimary"
        app:loadingDefaultText="Download"
        app:loadingText="We are loading"
        app:loadingTextColor="@color/white" />


</androidx.constraintlayout.widget.ConstraintLayout>